src/mongo/tools/export.cpp
@@ -92,7 +92,10 @@ public:
         case jstOID:
             return "ObjectID(" + object.OID().toString() + ")"; // OIDs are always 24 bytes
         case Date:
-            return dateToISOStringUTC(object.Date());
+            // We need to check if we can actually format this date.  See SERVER-13760.
+            return object.Date().isFormatable() ?
+                        dateToISOStringUTC(object.Date()) :
+                        csvEscape(object.jsonString(Strict, false));
         case Timestamp:
             return csvEscape(object.jsonString(Strict, false));
         case RegEx:
