src/mongo/util/time_support_test.cpp
@@ -168,6 +168,10 @@ namespace {
             swull = dateFromISOString("2058-02-20T18:29:11.100Z");
             ASSERT_OK(swull.getStatus());
             ASSERT_EQUALS(swull.getValue(), 2781455351100ULL);
+
+            swull = dateFromISOString("3001-01-01T08:00:00.000Z");
+            ASSERT_OK(swull.getStatus());
+            ASSERT_EQUALS(swull.getValue(), 32535244800000ULL);
         }
 
         swull = dateFromISOString("2013-02-20T18:29:11.100Z");
